# retavortaropy

./: .gitignore  CLAUDE.md  README.md  config.py  download_revo.py  genkaps.py  genrads.py  gensenses.py  kap_dictionary.json  process_ir.py  pyproject.toml  rad_dictionary.json  test_genkaps.py  test_gensenses.py
.claude/: settings.local.json
src/retavortaropy/: main.py  utils.py  xmlparse.py
src/retavortaropy/data/: vortaro.py
